--- a/.github/workflows/discord-changelog.yml
+++ b/.github/workflows/discord-changelog.yml
@@ -1,34 +1,39 @@
-name: Discord Changelog Notification
+- name: Send Discord Notification via Embed
+  uses: actions/github-script@v7
+  env:
+    DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+  with:
+    script: |
+      const repoName = process.env.GITHUB_REPOSITORY;
+      const repoUrl = `https://github.com/${repoName}`;
+      const commits = context.payload.commits;
 
-on:
-  push:
-    branches:
-      - main  # Change this to your desired branch
+      const fields = commits.map(commit => {
+        const shortSha = commit.id.substring(0, 7);
+        const commitUrl = commit.url;
+        const titleLine = commit.message.split('\n')[0];
+        const description = commit.message.split('\n').slice(1).join('\n');
+        return {
+          name: `[\`${shortSha}\`](${commitUrl}) - ${titleLine}`,
+          value: description || "No additional message",
+        };
+      });
 
-jobs:
-  notify:
-    runs-on: ubuntu-latest
+      const payload = {
+        embeds: [
+          {
+            title: `Push to ${repoName}`,
+            url: repoUrl,
+            description: `New commit${commits.length > 1 ? 's' : ''} pushed to [${repoName}](${repoUrl})`,
+            fields: fields,
+            color: 0x7289DA, // Discord blurple
+            timestamp: new Date().toISOString()
+          }
+        ]
+      };
 
-    steps:
-      - name: Send Discord Notification
-        uses: actions/github-script@v7
-        env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-        with:
-          script: |
-            const repoName = process.env.GITHUB_REPOSITORY;
-            const repoUrl = `https://github.com/${repoName}`;
-            const commits = context.payload.commits;
-
-            let message = `**[${repoName}](${repoUrl}) - Push Notification**\n\n`;
-
-            for (const commit of commits) {
-              const shortSha = commit.id.substring(0, 7);
-              message += `*[\`${shortSha}\`](${commitUrl})* - ${titleLine} (\`${commit.author.name}\`)\n`;
-            }
-
-            await fetch(process.env.DISCORD_WEBHOOK_URL, {
-              method: 'POST',
-              headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({ content: message })
-            });
+      await fetch(process.env.DISCORD_WEBHOOK_URL, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(payload)
+      });
